--- a/public/modal.html
+++ b/public/modal.html
@@ -1,5 +1,39 @@
-<head></head>
+<head>
+    <style>
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 300px;
+            background-color: green;
+        }
+
+        .content{
+            margin-left: 300px;
+        }
+        .modal-body {
+            background-color: white;
+            margin: auto;
+            height: 30%;
+            width: 30%;
+        }
+        .modal {
+            height: 100%;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: grey;
+        }
+    </style>
+</head>
 <body>
+    <div class="modal">
+        <div class="modal-body">
+            <h1>I am a model</h1>
+        </div>
+    </div>
     <div class="sidebar" >I am a sidebar</div>
     <div class="content" >
         <h1>I am some content</h1>
