--- a/public/modal.html
+++ b/public/modal.html
@@ -9,15 +9,17 @@
             background-color: green;
         }
 
-        .content{
+        .content {
             margin-left: 300px;
         }
+
         .modal-body {
             background-color: white;
             margin: auto;
             height: 30%;
             width: 30%;
         }
+
         .modal {
             height: 100%;
             width: 100%;
@@ -25,17 +27,25 @@
             top: 0;
             left: 0;
             background-color: grey;
+            z-index: 10;
+        }
+        .positioned {
+            position: relative;
+            z-index: 0;
         }
     </style>
 </head>
+
 <body>
-    <div class="modal">
-        <div class="modal-body">
-            <h1>I am a model</h1>
+    <div class="positioned">
+        <div class="modal">
+            <div class="modal-body">
+                <h1>I am a model</h1>
+            </div>
         </div>
     </div>
-    <div class="sidebar" >I am a sidebar</div>
-    <div class="content" >
+    <div class="sidebar">I am a sidebar</div>
+    <div class="content">
         <h1>I am some content</h1>
     </div>
 </body>
